fix(z-index): z-index bug 수정

--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -47,6 +47,10 @@
     }
   }
 
+  .filterLayout {
+    z-index: 3;
+  }
+
   .mainText {
     font-size: 40px;
     line-height: 48px;
